@@ -1,6 +1,11 @@
 2011-10-25  Alan Modra  <amodra@gmail.com>
 
 	Apply mainline patches
+	2011-10-08  H.J. Lu  <hongjiu.lu@intel.com>
+	PR ld/13250
+	* elflink.c (elf_link_add_object_symbols): Preserve the maximum
+	alignment and size for common symbols.
+
 	2011-10-08  Alan Modra  <amodra@gmail.com>
 	PR ld/13229
 	PR ld/13244
